About section partially done

--- a/index.html
+++ b/index.html
@@ -1,5 +1,41 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio of Indivari</title>
+    <link rel="stylesheet" href="index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped:wght@600&family=Quicksand:wght@300&display=swap"
+      rel="stylesheet"
+    />
+  </head>
   <body>
-    <h2>Portfolio of Indivari</h2>
+    <navbar>
+      <ul class="nav-list">
+        <li class="nav-item">
+          <a href="#">About</a>
+        </li>
+
+        <li class="nav-item">
+          <a href="#">Projects</a>
+        </li>
+
+        <li class="nav-item">
+          <a href="#">Contact</a>
+        </li>
+      </ul>
+    </navbar>
+    <section id="about-section">
+      <div class="about-image-wrapper">
+        <div class="about-image-div">
+          <img id="profile-img" src="./images/profile.jpg" alt="" srcset="" />
+        </div>
+      </div>
+      <div class="about-content">Hello!</div>
+    </section>
   </body>
 </html>
