--- a/index.html
+++ b/index.html
@@ -46,41 +46,42 @@
 <div id="main-wrapper"> 
   
   <!-- Header -->
-  <header id="header" class="sticky-top"> 
+  <header id="header" class="sticky-top-slide"> 
     <!-- Navbar -->
-    <nav class="primary-menu navbar navbar-expand-none navbar-overlay navbar-overlay-dark bg-transparent border-bottom-0 text-5 fw-600">
-      <div class="container"> 
-        <!-- Logo --> 
-        <a class="logo" href="index.html" title="Callum"> <img src="images/logo.png" alt="Callum"/> </a> 
-        <!-- Logo End -->
-        <div class="text-3 ms-auto me-2"><span class="text-4 me-2"><i class="fas fa-phone"></i></span>(060) 444 434 444</div>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#header-nav"><span></span><span></span><span></span></button>
-        <div id="header-nav" class="collapse navbar-collapse">
-          <div class="d-flex flex-column h-100 align-items-center justify-content-center">
+    <nav class="primary-menu navbar navbar-expand-lg text-uppercase navbar-line-under-text fw-600">
+      <div class="container position-relative">
+        <div class="col-auto col-lg-2 d-inline-flex ps-lg-0"> 
+          <!-- Logo --> 
+          <a class="logo" href="index.html" title="Callum"> <img src="images/logo.png" alt="Callum"/> </a> 
+          <!-- Logo End --> 
+        </div>
+        <div class="col col-lg-8 navbar-accordion px-0">
+          <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#header-nav"><span></span><span></span><span></span></button>
+          <div id="header-nav" class="collapse navbar-collapse justify-content-center">
             <ul class="navbar-nav">
-              <li class="nav-item"><a class="nav-link smooth-scroll active" href="#home">Home</a></li>
-              <li class="nav-item"><a class="nav-link smooth-scroll" 	href="#about">About Me</a></li>
-              <li class="nav-item"><a class="nav-link smooth-scroll" href="#services">What I Do</a></li>
+			  <li class="nav-item"><a class="nav-link smooth-scroll active" href="#home">Home</a></li>
+              <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
+              <li class="nav-item"><a class="nav-link smooth-scroll" href="#services">Services</a></li>
               <li class="nav-item"><a class="nav-link smooth-scroll" href="#resume">Resume</a></li>
               <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li>
               <li class="nav-item"><a class="nav-link smooth-scroll" href="#faq">FAQ</a></li>
-              <li class="nav-item"><a class="nav-link smooth-scroll" href="#testimonial">Client Speak</a></li>
-              <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact Me</a></li>
-            </ul>
-            <ul class="social-icons social-icons-light social-icons-lg social-icons-light d-inline-flex mt-4">
-              <li class="social-icons-twitter"><a data-bs-toggle="tooltip" href="https://twitter.com/harnishdesign/" target="_blank" title="" data-bs-original-title="Twitter"><i class="fab fa-twitter"></i></a></li>
-              <li class="social-icons-facebook"><a data-bs-toggle="tooltip" href="http://www.facebook.com/harnishdesign/" target="_blank" title="" data-bs-original-title="Facebook"><i class="fab fa-facebook"></i></a></li>
-              <li class="social-icons-instagram"><a data-bs-toggle="tooltip" href="http://www.instagram.com/" target="_blank" title="" data-bs-original-title="Instagram"><i class="fab fa-instagram"></i></a></li>
-              <li class="social-icons-linkedin"><a data-bs-toggle="tooltip" href="http://www.linkedin.com/" target="_blank" title="" data-bs-original-title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
-              <li class="social-icons-dribbble"><a data-bs-toggle="tooltip" href="http://www.dribbble.com/harnishdesign/" target="_blank" title="" data-bs-original-title="Dribbble"><i class="fab fa-dribbble"></i></a></li>
+              <li class="nav-item"><a class="nav-link smooth-scroll" href="#testimonial">Client</a></li>
+              <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
             </ul>
           </div>
+        </div>
+        <div class="col-auto col-lg-2 d-flex justify-content-end ps-0">
+		  <ul class="social-icons">
+		  <li class="social-icons-facebook"><a data-bs-toggle="tooltip" href="http://www.facebook.com/" target="_blank" title="" data-bs-original-title="Facebook"><i class="fab fa-facebook"></i></a></li>
+          <li class="social-icons-twitter"><a data-bs-toggle="tooltip" href="http://www.twitter.com/" target="_blank" title="" data-bs-original-title="Twitter"><i class="fab fa-twitter"></i></a></li>
+		  <li class="social-icons-instagram"><a data-bs-toggle="tooltip" href="http://www.instagram.com/" target="_blank" title="" data-bs-original-title="Instagram"><i class="fab fa-instagram"></i></a></li>
+          </ul>
         </div>
       </div>
     </nav>
     <!-- Navbar End --> 
   </header>
-  <!-- Header End --> 
+  <!-- Header End -->
   
   <!-- Content
   ============================================= -->
@@ -88,10 +89,10 @@
     
     <!-- Intro
     ============================================= -->
-    <section id="home" class="bg-primary d-flex fullscreen position-relative py-5">
-      <div class="container my-auto py-4">
-        <div class="row">
-          <div class="col-lg-7 text-center text-lg-start align-self-center order-1 order-lg-0 wow fadeIn">
+    <section id="home" class="bg-primary d-flex fullscreen-with-header position-relative">
+      <div class="container my-auto py-5 py-lg-0">
+        <div class="row py-4">
+          <div class="col-lg-7 text-center text-lg-start align-self-center order-1 order-lg-0">
             <h1 class="text-12 fw-300 mb-0 text-uppercase">Hi, I'm a Freelancer</h1>
             <div class="typed-strings">
               <p>Designer</p>
@@ -100,8 +101,7 @@
             </div>
             <h2 class="text-21 fw-600 text-uppercase mb-0 ms-n1"><span class="typed"></span></h2>
             <p class="text-5">based in Los Angeles, USA.</p>
-            <a href="#portfolio" class="btn btn-dark rounded-0 smooth-scroll mt-3">View My Works</a><a href="#contact" class="btn btn-link text-dark smooth-scroll mt-3">Contact Me<span class="text-4 ms-2"><i class="far fa-arrow-alt-circle-down"></i></span></a>
-		  </div>
+            <a href="#portfolio" class="btn btn-dark rounded-0 smooth-scroll mt-3">View My Works</a><a href="#contact" class="btn btn-link text-dark smooth-scroll mt-3">Contact Me<span class="text-4 ms-2"><i class="far fa-arrow-alt-circle-down"></i></span></a> </div>
           <div class="col-lg-5 text-center align-self-center mb-4 mb-lg-0 order-0 order-lg-1">
             <div class="bg-light rounded-pill d-inline-block p-3 shadow-lg wow zoomIn"> <img class="img-fluid rounded-pill d-block" src="images/web-developer.jpg" title="I'm Callum" alt=""></div>
           </div>
@@ -574,7 +574,7 @@
 
 <!-- Back to Top
 ============================================= --> 
-<a id="back-to-top" class="rounded-circle" data-bs-toggle="tooltip" title="Back to Top" href="javascript:void(0)"><i class="fas fa-arrow-up"></i></a> 
+<a id="back-to-top" class="rounded-circle" data-bs-toggle="tooltip" title="Back to Top" href="javascript:void(0)"><i class="fas fa-arrow-up"></i></a>
 
 <!-- JavaScript --> 
 <script src="vendor/jquery/jquery.min.js"></script> 
@@ -584,7 +584,7 @@
 <!-- Appear --> 
 <script src="vendor/jquery.appear/jquery.appear.min.js"></script> 
 <!-- WOW animation --> 
-<script src="vendor/wow/wow.min.js"></script> 
+<script src="vendor/wow/wow.min.js"></script>
 <!-- Images Loaded --> 
 <script src="vendor/imagesloaded/imagesloaded.pkgd.min.js"></script> 
 <!-- Typed --> 
