--- a/ajax/portfolio-ajax-project-2.html
+++ b/ajax/portfolio-ajax-project-2.html
@@ -4,12 +4,21 @@
     <div class="col-md-7"> <img class="img-fluid" alt="" src="images/projects/project-5.jpg"> </div>
     <div class="col-md-5">
       <h4 class="text-4 fw-600">Project Info:</h4>
-      <p>Quidam lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure. Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</p>
+      <p>A server-side CRUD app called "Trip-Finder" to find and rate interesting trip locations in Australia.The main features include: 
+        <ul>
+          <li>user can add, edit, delete or view trip locations.</li>
+          <li>The users can signup, login and logout from the system.</li>
+          <li>Keeps track of user sessions.</li>
+          <li>The user can filter trip locations based on the major cities.</li>
+          <li>The user can rate trip locations.</li>
+          <li>Displays trip locations based on the descending order of user rating.</li>
+        </ul>
+         </p>
       <h4 class="text-4 fw-600 mt-4">Project Details:</h4>
       <ul class="list-style-2">
         <li><span class="text-dark fw-600 me-2">Client:</span>Jonn Cena</li>
         <li><span class="text-dark fw-600 me-2">Industry:</span>Puzzle Game</li>
-        <li><span class="text-dark fw-600 me-2">Technologies:</span>iOS, HTML5, CSS3, PHP, Java</li>
+        <li><span class="text-dark fw-600 me-2">Technologies:</span>HTML,CSS,Ruby, Sinatra & PostgreSQL</li>
         <li><span class="text-dark fw-600 me-2">Date:</span>Aug 05, 2020</li>
         <li><span class="text-dark fw-600 me-2">URL:</span><a class="btn btn-primary shadow-none rounded-0 px-3 py-1" href="#" target="_blank">www.example.com <i class="fas fa-external-link-alt ms-1"></i></a></li>
       </ul>
