--- a/ajax/portfolio-ajax-project-4.html
+++ b/ajax/portfolio-ajax-project-4.html
@@ -35,7 +35,7 @@
       <ul class="list-style-2">
         <li>
           <span class="text-dark fw-600 me-2">Technologies:</span>HTML5, CSS,
-          JavaScript
+          JavaScript, MongoDb, Axios,  Google maps API, Google books API
         </li>
 
         <li>
