--- a/index.html
+++ b/index.html
@@ -251,16 +251,7 @@
                 class="col-lg-4 mt-4 mt-lg-0 wow fadeInUp"
                 data-wow-delay="0.2s"
               >
-                <div class="featured-box style-4">
-                  <div
-                    class="featured-box-icon text-25 fw-500 bg-primary rounded-circle"
-                  >
-                    <span class="wow heartBeat" data-wow-delay="1.3s">22</span>
-                  </div>
-                  <h3 class="text-7 wow rubberBand" data-wow-delay="2s">
-                    Years of <span class="fw-700">Experiance</span>
-                  </h3>
-                </div>
+                <div class="featured-box style-4"></div>
               </div>
             </div>
             <div class="row gy-3 mt-4">
@@ -389,7 +380,9 @@
               </div>
             </div>
             <p class="text-center mt-5 wow fadeInUp">
-              <a href="#" class="btn btn-outline-dark shadow-none rounded-0"
+              <a
+                href="./cv/Indivari_Jayasundera_Resume.pdf"
+                class="btn btn-outline-dark shadow-none rounded-0"
                 >Download CV</a
               >
             </p>
