--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                   <p class="text-muted">
                     Implemented and deployed a server-side CRUD app called
                     "Trip-Finder" to find and rate interesting trip locations in
-                    Australia. Technologies used: HTML,CSS,Ruby, Sinatra &
+                    Australia. Technologies used: HTML, CSS, Ruby, Sinatra &
                     PostgreSQL
                   </p>
                 </div>
@@ -362,21 +362,62 @@
             <h2 class="text-7 fw-600 mb-4 pb-2 mt-5 wow fadeInUp">My Skills</h2>
             <div class="row gx-5">
               <div class="col-md-6 wow fadeInUp">
-                <p class="fw-500 text-start mb-2">HTML/CSS</p>
-
-                <p class="fw-500 text-start mb-2">JavaScript</p>
-
-                <p class="fw-500 text-start mb-2">Node JS</p>
-                <p class="fw-500 text-start mb-2">React JS</p>
-              </div>
-              <div class="col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-                <p class="fw-500 text-start mb-2">Ruby</p>
-
-                <p class="fw-500 text-start mb-2">Sinatra</p>
-
-                <p class="fw-500 text-start mb-2">Typescript</p>
-
-                <p class="fw-500 text-start mb-2">PostgreSQL</p>
+                <img
+                  src="images/html5.png"
+                  alt=""
+                  width="150px"
+                  height="150px"
+                />
+                <img src="images/css.png" alt="" width="150px" height="100px" />
+                <img src="images/js.png" alt="" width="150px" height="100px" />
+                <img
+                  src="images/ruby.png"
+                  alt=""
+                  width="150px"
+                  height="150px"
+                />
+                <img
+                  src="images/nodejs.png"
+                  alt=""
+                  width="150px"
+                  height="150px"
+                />
+                <img
+                  src="./images/react.png"
+                  alt=""
+                  width="150px"
+                  height="150px"
+                />
+                <img
+                  src="images/sinatra.jpg"
+                  alt=""
+                  width="150px"
+                  height="150px"
+                />
+                <img
+                  src="images/typescript.png"
+                  alt=""
+                  width="150px"
+                  height="150px"
+                />
+                <img
+                  src="images/postgres.png"
+                  alt=""
+                  width="150px"
+                  height="150px"
+                />
+                <img
+                  src="images/mongoDb.png"
+                  alt=""
+                  width="150px"
+                  height="150px"
+                />
+                <img
+                  src="images/express.png"
+                  alt=""
+                  width="150px"
+                  height="150px"
+                />
               </div>
             </div>
             <p class="text-center mt-5 wow fadeInUp">
