--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                   <h3 class="text-5">Australian Computer Society</h3>
                   <p class="mb-2">ACS Diploma</p>
                   <p class="text-muted">
-                    Quivalent to an AQF Diploma with a major in Computing
+                    Equivalent to an AQF Diploma with a major in Computing
                   </p>
                 </div>
               </div>
