--- a/ajax/portfolio-ajax-project-3.html
+++ b/ajax/portfolio-ajax-project-3.html
@@ -1,27 +1,8 @@
 <div class="container ajax-container">
-  <h2 class="text-6 fw-600 text-center mb-4">Project Title 1</h2>
-  <div class="row g-4">
-    <div class="col-md-7">
-      <div
-        class="owl-carousel owl-theme single-slideshow"
-        data-autoplay="true"
-        data-loop="true"
-        data-nav="true"
-        data-items="1"
-      >
-        <div class="item">
-          <img class="img-fluid" alt="" src="images/projects/project-1.jpg" />
-        </div>
-        <div class="item">
-          <img class="img-fluid" alt="" src="images/projects/project-3.jpg" />
-        </div>
-      </div>
-    </div>
-    <div class="col-md-5">
       <h4 class="text-4 fw-600">Project Info:</h4>
       <p>
         A single page web app called "Servo app" shows the petrol stations
-        closer to your current location.Also it shows petrol station statistics
+        closer to your current location. It uses Google maps API to mark petrol stations locations. Also it shows some useful petrol station statistics
         such as total number of stations and group summary by station owners.
       </p>
       <h4 class="text-4 fw-600 mt-4">Project Details:</h4>
@@ -41,6 +22,5 @@
           ></a>
         </li>
       </ul>
-    </div>
   </div>
 </div>
