--- a/index.html
+++ b/index.html
@@ -325,7 +325,9 @@
                   </p>
                   <p class="text-muted">
                     Implemented an online single page game app called
-                    'tic-tac-toe'. Technologies used : HTML, CSS & javascript.
+                    'tic-tac-toe'. Provides the options of "Play with a friend"
+                    or "Play with a computer". Technologies used : HTML, CSS &
+                    javascript.
                   </p>
                   <hr class="my-4" />
                   <h3 class="text-5"></h3>
@@ -341,18 +343,34 @@
                   <p class="mb-2"></p>
                   <p class="text-muted">
                     Completed a group project called "Servo app" to find the
-                    petrol stations nearby. Technologies used: HTML, CSS,
-                    javascript, express js, REST APIs, PostgreSQL and Google
-                    maps API.
+                    petrol stations nearby and show some useful statistics on
+                    them. Technologies used: HTML, CSS, javascript, express js,
+                    REST APIs, PostgreSQL and Google maps API.
                   </p>
                   <hr class="my-4" />
                   <h3 class="text-5"></h3>
                   <p class="mb-2"></p>
                   <p class="text-muted">
-                    Implemented and deployed a server-side CRUD app called
-                    "Trip-Finder" to find and rate interesting trip locations in
-                    Australia. Technologies used: HTML, CSS, Ruby, Sinatra &
-                    PostgreSQL
+                    Implemented a full stack application called "MoodBooster"
+                    which is a platform for sharing inspirational and motivation
+                    quotes. Users can add quotes by tagging them into different
+                    categories based on their interests. They can also, edit,
+                    delete or vote for the quotes. Technologies used: HTML, CSS,
+                    ReactJS, expressJS, MongoDb, NodeJS, OAuth.
+                  </p>
+
+                  <hr class="my-4" />
+                  <h3 class="text-5"></h3>
+                  <p class="mb-2"></p>
+                  <p class="text-muted">
+                    Implemented a full stack application called "bookshelf" as a
+                    group project. This is a community library app which
+                    includes the main features to view, donate, borrow and
+                    return library books. "Bookshelf" utilizes Google Maps API
+                    and Google Books API to find library locations and book
+                    information. Technologies used : ReactJS, HTML, CSS, Mongdb,
+                    ExpressJS, NodeJS, Google maps API, Google Books API,
+                    RESTful APIs.
                   </p>
                 </div>
               </div>
@@ -360,71 +378,33 @@
 
             <!-- My Skills -->
             <h2 class="text-7 fw-600 mb-4 pb-2 mt-5 wow fadeInUp">My Skills</h2>
-            <div class="row gx-5">
-              <div class="col-md-6 wow fadeInUp">
-                <img
-                  src="images/html5.png"
-                  alt=""
-                  width="150px"
-                  height="150px"
-                />
-                <img src="images/css.png" alt="" width="150px" height="100px" />
-                <img src="images/js.png" alt="" width="150px" height="100px" />
-                <img
-                  src="images/ruby.png"
-                  alt=""
-                  width="150px"
-                  height="150px"
-                />
-                <img
-                  src="images/nodejs.png"
-                  alt=""
-                  width="150px"
-                  height="150px"
-                />
-                <img
-                  src="./images/react.png"
-                  alt=""
-                  width="150px"
-                  height="150px"
-                />
-                <img
-                  src="images/sinatra.jpg"
-                  alt=""
-                  width="150px"
-                  height="150px"
-                />
-                <img
-                  src="images/typescript.png"
-                  alt=""
-                  width="150px"
-                  height="150px"
-                />
-                <img
-                  src="images/postgres.png"
-                  alt=""
-                  width="150px"
-                  height="150px"
-                />
-                <img
-                  src="images/mongoDb.png"
-                  alt=""
-                  width="150px"
-                  height="150px"
-                />
-                <img
-                  src="images/express.png"
-                  alt=""
-                  width="150px"
-                  height="150px"
-                />
-              </div>
-            </div>
+            <img src="images/html5.png" alt="" width="150px" height="150px" />
+            <img src="images/css.png" alt="" width="150px" height="150px" />
+            <img src="images/js.png" alt="" width="150px" height="150px" />
+            <img src="images/ruby.png" alt="" width="150px" height="150px" />
+            <img src="images/nodejs.png" alt="" width="150px" height="150px" />
+            <img src="./images/react.png" alt="" width="150px" height="150px" />
+            <img src="images/sinatra.jpg" alt="" width="150px" height="150px" />
+            <img
+              src="images/typescript.png"
+              alt=""
+              width="150px"
+              height="150px"
+            />
+            <img
+              src="images/postgres.png"
+              alt=""
+              width="150px"
+              height="150px"
+            />
+            <img src="images/mongoDb.png" alt="" width="150px" height="150px" />
+            <img src="images/express.png" alt="" width="150px" height="150px" />
+
             <p class="text-center mt-5 wow fadeInUp">
               <a
                 href="./cv/Indivari_Jayasundera_Resume.pdf"
                 class="btn btn-outline-dark shadow-none rounded-0"
-                >Download CV</a
+                >Download Resume</a
               >
             </p>
           </div>
@@ -451,20 +431,20 @@
                     <div class="portfolio-img">
                       <img
                         class="img-fluid d-block"
-                        src="images/projects/tictactoe.png"
+                        src="images/projects/MoodBooster.png"
                         alt=""
                       />
                       <div class="portfolio-overlay">
                         <a
                           class="popup-ajax stretched-link"
-                          href="ajax/portfolio-ajax-project-1.html"
+                          href="ajax/portfolio-ajax-project-5.html"
                         ></a>
                         <div class="portfolio-overlay-details">
                           <p class="text-primary text-8">
                             <i class="fas fa-file-alt"></i>
                           </p>
-                          <h5 class="text-white text-5">Detailed Project 1</h5>
-                          <span class="text-light">Category</span>
+                          <h5 class="text-white text-5">MoodBooster</h5>
+                          <span class="text-light">individual project</span>
                         </div>
                       </div>
                     </div>
@@ -488,8 +468,8 @@
                           <p class="text-primary text-8">
                             <i class="fas fa-file-alt"></i>
                           </p>
-                          <h5 class="text-white text-5">Detailed Project 2</h5>
-                          <span class="text-light">Category</span>
+                          <h5 class="text-white text-5">Trip Finder</h5>
+                          <span class="text-light">individual project</span>
                         </div>
                       </div>
                     </div>
@@ -513,8 +493,8 @@
                           <p class="text-primary text-8">
                             <i class="fas fa-file-alt"></i>
                           </p>
-                          <h5 class="text-white text-5">Detailed Project 3</h5>
-                          <span class="text-light">Category</span>
+                          <h5 class="text-white text-5">Servo</h5>
+                          <span class="text-light">group project</span>
                         </div>
                       </div>
                     </div>
@@ -538,8 +518,33 @@
                           <p class="text-primary text-8">
                             <i class="fas fa-file-alt"></i>
                           </p>
-                          <h5 class="text-white text-5">Detailed Project 4</h5>
-                          <span class="text-light">Category</span>
+                          <h5 class="text-white text-5">bookshelf</h5>
+                          <span class="text-light">individual project</span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 detailed">
+                  <div class="portfolio-box">
+                    <div class="portfolio-img">
+                      <img
+                        class="img-fluid d-block"
+                        src="images/projects/tictactoe.png"
+                        alt=""
+                      />
+                      <div class="portfolio-overlay">
+                        <a
+                          class="popup-ajax stretched-link"
+                          href="ajax/portfolio-ajax-project-1.html"
+                        ></a>
+                        <div class="portfolio-overlay-details">
+                          <p class="text-primary text-8">
+                            <i class="fas fa-file-alt"></i>
+                          </p>
+                          <h5 class="text-white text-5">Tic-Tac-Toe</h5>
+                          <span class="text-light">individual project</span>
                         </div>
                       </div>
                     </div>
