--- a/ajax/portfolio-ajax-project-4.html
+++ b/ajax/portfolio-ajax-project-4.html
@@ -1,29 +1,10 @@
 <div class="container ajax-container">
-  <h2 class="text-6 fw-600 text-center mb-4">Project Title 1</h2>
-  <div class="row g-4">
-    <div class="col-md-7">
-      <div
-        class="owl-carousel owl-theme single-slideshow"
-        data-autoplay="true"
-        data-loop="true"
-        data-nav="true"
-        data-items="1"
-      >
-        <div class="item">
-          <img class="img-fluid" alt="" src="images/projects/project-1.jpg" />
-        </div>
-        <div class="item">
-          <img class="img-fluid" alt="" src="images/projects/project-3.jpg" />
-        </div>
-      </div>
-    </div>
-    <div class="col-md-5">
       <h4 class="text-4 fw-600">Project Info:</h4>
       <p> This is a single page web app developed for a community library.
           Main features include:
         <ul>
             <li>  Users signup/login/log out</li>
-            <li>Users can lookup books in Google Books api and then Donate to our library.</li>
+            <li>Users can lookup books in Google Books api and then Donate to the library.</li>
             <li>Users can search in the local library, filtring the books shown in the sidebar.</li>
             <li>Clicking on each book card (detail) will open a new modal with books details with the options of Borrow or Return depending on books availability.</li>
             <li>Google Maps show the location of street libraries, and book locations where users can borrow the books.</li>
@@ -34,20 +15,19 @@
       <h4 class="text-4 fw-600 mt-4">Project Details:</h4>
       <ul class="list-style-2">
         <li>
-          <span class="text-dark fw-600 me-2">Technologies:</span>HTML5, CSS,
-          JavaScript, MongoDb, Axios,  Google maps API, Google books API
+          <span class="text-dark fw-600 me-2">Technologies:</span>HTML5, CSS, React, 
+          JavaScript, MongoDb, Axios, RESTful APIs,  Google maps API, Google books API
         </li>
 
         <li>
           <span class="text-dark fw-600 me-2">GitHub:</span
           ><a
             class="btn btn-primary shadow-none rounded-0 px-3 py-1"
-            href="https://github.com/indivari/tictactoe"
+            href="https://github.com/indivari/bookshelf"
             target="_blank"
             >www.github.com <i class="fas fa-external-link-alt ms-1"></i
           ></a>
         </li>
       </ul>
-    </div>
   </div>
 </div>
