--- a/ajax/portfolio-ajax-project-2.html
+++ b/ajax/portfolio-ajax-project-2.html
@@ -3,6 +3,7 @@
       <p>A server-side CRUD app called "Trip-Finder" to find and rate interesting trip locations in Australia.The main features include: 
         <ul>
           <li>Users can add, edit, delete or view trip locations.</li>
+          <li>Password authentication using Bcrypt.</li>
           <li>Users can signup, login and logout from the system.</li>
           <li>Keeps track of user sessions.</li>
           <li>The user can filter trip locations based on the major cities.</li>
