--- a/ajax/portfolio-ajax-project-5.html
+++ b/ajax/portfolio-ajax-project-5.html
@@ -4,7 +4,7 @@
 
             Main features include:
           <ul>
-              <li>  Users signup/login/log out using OAuth</li>
+              <li>  User authentication using Facebook and Github with OAuth/passportJS</li>
               <li>Users can post their quotes.</li>
               <li>Users can tag quotes to different groups</li>
               <li>Users can vote on quotes by others.</li>
