--- a/ajax/portfolio-ajax-project-1.html
+++ b/ajax/portfolio-ajax-project-1.html
@@ -23,6 +23,15 @@
             >www.github.com <i class="fas fa-external-link-alt ms-1"></i
           ></a>
         </li>
+        <li>
+          <span class="text-dark fw-600 me-2">Website:</span
+          ><a
+            class="btn btn-primary shadow-none rounded-0 px-3 py-1"
+            href="https://pages.git.generalassemb.ly/indivari/tictactoe/"
+            target="_blank"
+            >tic-tac-toe<i class="fas fa-external-link-alt ms-1"></i
+          ></a>
+        </li>
       </ul>
   </div>
 </div>
