--- a/ajax/portfolio-ajax-project-2.html
+++ b/ajax/portfolio-ajax-project-2.html
@@ -17,6 +17,8 @@
         <li><span class="text-dark fw-600 me-2">Technologies:</span>HTML, CSS, Javscript,  Ruby, Sinatra & PostgreSQL</li>
         
         <li><span class="text-dark fw-600 me-2">GitHub:</span><a class="btn btn-primary shadow-none rounded-0 px-3 py-1" href="https://github.com/indivari/trip-finder-app" target="_blank">www.github.com <i class="fas fa-external-link-alt ms-1"></i></a></li>
+
+        <li><span class="text-dark fw-600 me-2">Website:</span><a class="btn btn-primary shadow-none rounded-0 px-3 py-1" href="https://nameless-garden-53611.herokuapp.com/" target="_blank">Trip-Finder<i class="fas fa-external-link-alt ms-1"></i></a></li>
       </ul>
       <div class="row g-2 align-items-center">
         <div class="col-auto text-dark fw-600">  </div>
